# OpenHurricane

./: .clang-format  .gitignore  CMakeLists.txt  Hurricane-XMLstandard.cont  LICENSE.txt  README.md
applications/: CMakeLists.txt
applications/HurricaneMain/: CMakeLists.txt  HurricaneMain.cpp  HurricaneMain.hpp  OpenHurricaneMain.cpp  OpenHurricaneMain.hpp
applications/chemSolvers/: CMakeLists.txt  chemSolvers.cpp  chemSolvers.hpp
src/: CMakeLists.txt
src/Hurricane/: OpenHurricane.hpp
src/Hurricane/common/: commonInclude.hpp
src/Hurricane/common/constants/: constants.hpp  mathConstants.hpp  physicalConstant.hpp
src/Hurricane/common/initializing/: initializing.hpp
src/Hurricane/dataStructure/: dataStructure.hpp
src/Hurricane/fileIO/include/: IOsstream.hpp  IOsstream.inl  cgnsIO.hpp  cgnsIO.inl  fileIsstream.hpp  fileIsstream.inl  fileOsstream.hpp  fileOsstream.inl  hdf5I.hpp  hdf5I.inl  hdf5IO.hpp  hdf5IO.inl  hdf5O.hpp  hdf5O.inl  stringstream.hpp  tecplotFormat.hpp  tecplotWriter.hpp
src/Hurricane/fileIO/src/: cgnsIO.cpp  cgnsIORead.cpp  cgnsIOWrite.cpp  fileIsstream.cpp  fileOsstream.cpp  hdf5I.cpp  hdf5IO.cpp  hdf5O.cpp  tecplotWriter.cpp
src/Hurricane/packs/include/: packs.hpp
src/Hurricane/packs/src/: packs.cpp
src/Hurricane/parallel/: parallel.hpp
src/boundaryConditions/boundaryCondition/include/: Riemann.hpp  adiabaticWall.hpp  boundaries.hpp  boundary.hpp  detonationInlet.hpp  fixedGradient.hpp  fixedValue.hpp  fixedValueZeroGradient.hpp  getBoundariesFromController.hpp  interior.hpp  invSlipWall.hpp  isothermalWall.hpp  massFlowInlet.hpp  noSlipWall.hpp  outflow.hpp  outflowPressure.hpp  parsingDirection.hpp  pressureInlet.hpp  pressureOutlet.hpp  rareSlipWall.hpp  rareTempJumpWall.hpp  subsonicInlet.hpp  symmetry.hpp  zeroGradient.hpp
src/boundaryConditions/boundaryCondition/src/: Riemann.cpp  adiabaticWall.cpp  boundaries.cpp  detonationInlet.cpp  fixedGradient.cpp  fixedValue.cpp  fixedValueZeroGradient.cpp  getBoundariesFromController.cpp  getSupersonicInlet.cpp  getSyntheticTurbInlet.cpp  interior.cpp  invSlipWall.cpp  isothermalWall.cpp  massFlowInlet.cpp  noSlipWall.cpp  outflow.cpp  outflowPressure.cpp  parsingDirection.cpp  pressureInlet.cpp  pressureOutlet.cpp  rareSlipWall.cpp  rareTempJumpWall.cpp  subsonicInlet.cpp  symmetry.cpp  zeroGradient.cpp
src/boundaryConditions/transfers/include/: integerTransfer.hpp  integerTransfer.inl  realTransfer.hpp  realTransfer.inl  tensorTransfer.hpp  tensorTransfer.inl  transfer.hpp  transfer.inl  transferTemplate.hpp  transferTemplate.inl  vectorTransfer.hpp  vectorTransfer.inl
src/boundaryConditions/transfers/src/: integerTransfer.cpp  realTransfer.cpp  tensorTransfer.cpp  transfer.cpp  vectorTransfer.cpp
src/fieldVar/include/: calculateFaceZoneVar.hpp  calculateFaceZoneVar.inl  calculateFieldVar.hpp  calculateFieldVar.inl  fieldParameterFuncMap.hpp  timeSumField.hpp  writeAveFieldVar.hpp  writeFaceZone.hpp  writeFaceZone.inl  writeFieldVar.hpp  writeFieldVar.inl  writeFieldVars.hpp  writeFieldVars.inl  writeInstantFieldVar.hpp  writePulseFieldVar.hpp
src/fieldVar/src/: calculateFaceZoneVar.cpp  calculateFieldVar.cpp  timeSumField.cpp  writeAveFieldVar.cpp  writeFaceZone.cpp  writeFieldVar.cpp  writeFieldVars.cpp  writeInstantFieldVar.cpp  writePulseFieldVar.cpp
src/finiteVolume/timeMarching/include/: AMGSchemeTest.hpp  BDF123.hpp  BDF123.inl  ESDIRK.hpp  ESDIRK.inl  LUSGS.hpp  LUSGS.inl  MRK.hpp  TVDRK.hpp  TVDRK4.hpp  cuSparSolverTest.hpp  makeDualTimeSteppingMethod.hpp  semiImplicitMRK.hpp  timeMarching.hpp  timeMarching.inl  unsteady.hpp  unsteadyLUSGS.hpp  unsteadyMRK.hpp  unsteadySemiImplicitMRK.hpp  unsteadyTVDRK.hpp  unsteadyTVDRK4.hpp
src/finiteVolume/timeMarching/src/: AMGSchemeTest.cpp  BDF123.cpp  ESDIRK.cpp  LUSGS.cpp  MRK.cpp  TVDRK.cpp  TVDRK4.cpp  cuSparSolverTest.cpp  makeDualTimeSteppingMethod.cpp  semiImplicitMRK.cpp  timeMarching.cpp  unsteady.cpp  unsteadyLUSGS.cpp  unsteadyMRK.cpp  unsteadySemiImplicitMRK.cpp  unsteadyTVDRK.cpp  unsteadyTVDRK4.cpp
src/flowModel/include/: EulerFlow.hpp  eddyViscosity.hpp  flowModel.hpp  laminarFlow.hpp
src/flowModel/src/: EulerFlow.cpp  eddyViscosity.cpp  flowModel.cpp  laminarFlow.cpp
src/meshPreProcess/decomposing/include/: decomposingByMetis.hpp  decomposingByMetis.inl  loadBalancingWeights.hpp  loadBalancingWeights.inl
src/meshPreProcess/decomposing/src/: decomposingByMetis.cpp  loadBalancingWeights.cpp
src/meshPreProcess/meshIO/include/: CGNSMeshRead.hpp  FluentMeshRead.hpp  FluentMeshRead.inl  HurricaneMeshRead.hpp  (+5 more)
src/monitor/include/: area.hpp  areaWeightedAverage.hpp  areaWeightedUniformityIndex.hpp  drag.hpp  faceMonitors.hpp  facetAverage.hpp  facetMaximum.hpp  facetMinimum.hpp  flowRate.hpp  force.hpp  forceMonitors.hpp  forces.hpp  integral.hpp  lift.hpp  massFlowRate.hpp  massWeightedAverage.hpp  massWeightedUniformityIndex.hpp  moment.hpp  monitor.hpp  monitors.hpp  pointMonitors.hpp  residuals.hpp  standardDeviation.hpp  sumOfFieldVariable.hpp  surfaceIntegrals.hpp  volumeFlowRate.hpp
src/monitor/src/: area.cpp  areaWeightedAverage.cpp  areaWeightedUniformityIndex.cpp  drag.cpp  faceMonitors.cpp  facetAverage.cpp  facetMaximum.cpp  facetMinimum.cpp  flowRate.cpp  force.cpp  forceMonitors.cpp  forces.cpp  integral.cpp  lift.cpp  massFlowRate.cpp  massWeightedAverage.cpp  massWeightedUniformityIndex.cpp  moment.cpp  monitor.cpp  monitors.cpp  pointMonitors.cpp  residuals.cpp  standardDeviation.cpp  sumOfFieldVariable.cpp  surfaceIntegrals.cpp  volumeFlowRate.cpp
src/pseudoTime/include/: CFL.hpp  cellBasedMethod.hpp  expCFL.hpp  expertSystemAdaptCFL.hpp  faceBasedMethod.hpp  linearCFL.hpp  pseudoTime.hpp  pseudoTime.inl
src/pseudoTime/src/: CFL.cpp  cellBasedMethod.cpp  expCFL.cpp  expertSystemAdaptCFL.cpp  faceBasedMethod.cpp  linearCFL.cpp  pseudoTime.cpp
src/referenceValues/include/: freeStream.hpp  freeStream.inl  referenceValues.hpp  referenceValues.inl
src/referenceValues/src/: freeStream.cpp  referenceValues.cpp
src/shocks/include/: shockSensor.hpp
src/shocks/src/: shockSensor.cpp
(+730 files in other folders)
