# ---------------------------------------------------------------
# Programmer(s): Rao Sihang
# ---------------------------------------------------------------

cmake_minimum_required (VERSION 3.18)

message ( STATUS "The current cmake file is ${CMAKE_CURRENT_LIST_FILE}" ) 

add_subdirectory (HurricaneMain)
